--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -111,4 +111,14 @@
     .consultation .feed-form {
         margin: 30px auto;
     }
+
+    
+
+    .carusel .carusel__inner  {
+            width: 100%;
+            img {
+            width: 100%;
+        }
+        
+    }
 }
