--- a/src/sass/blocks/_carusel.scss
+++ b/src/sass/blocks/_carusel.scss
@@ -1,26 +1,57 @@
 .carusel {
     padding: 81px 0;
     &__inner {
-        width: 500px;
+        position: relative;
+        width: 750px;
         margin: 0 auto;
     }
+    .prev, .next {
+        position: absolute;
+        top: 50%;
+        transform: rotateY(-50%);
+        left: -66px;
+        border: none;
+        background-color: #fff;
+        img {
+            width: 31px;
+            height: 50px;
+        }
     
-}
-
-.slick-prev {
-    // position: absolute;
-    top: 50%;
-    transform: rotate(-50%);
-    left: 66px;
-    border: none;
-    background-color: #fff;
-    img {
-        width: 31px;
-        height: 50px;
     }
-
+    .next {
+        right: -66px;
+        left: auto;  
+    }
+    .tns-item {
+        img {
+            display: block;
+            margin: 0 auto;
+        }
+        
+    }
+    .tns-nav {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        button {
+            background-color: $main-color;
+            margin-bottom: 10px;
+            margin-right: 10px;
+            padding: 10px;
+            border-radius: 100%;
+            -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+            border: none;
+            
+        }
+        // button:hover {
+        //     background-color:  rgba(211, 71, 71, 0.774);
+        // }
+        .tns-nav-active {
+            background-color:  rgba(211, 71, 71, 0.774);
+        }
+    }
 }
 
-.slick-arrow {
-    
-}
+
+
+
