--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -8,17 +8,22 @@
     font-size: 12px;
     font-weight: 500;
     text-transform: uppercase;
+    cursor: pointer;
     &_main {
         margin-top: 67px;
         width: 300px;
         height: 50px;
         font-size: 16px;
         text-align: center;
-        padding-top: 14px;
     }
     &_submit {
         width: 100%;
         height: 55px;
         font-size: 16px;
+    }
+    &_mini {
+        width: 131px;
+        height: 40px;
+        font-size: 14px;
     }
 }
