--- a/src/sass/blocks/_carusel.scss
+++ b/src/sass/blocks/_carusel.scss
@@ -12,6 +12,7 @@
         left: -66px;
         border: none;
         background-color: #fff;
+        -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
         img {
             width: 31px;
             height: 50px;
