--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -21,3 +21,6 @@
 @import './blocks/titles';
 @import './blocks/forms';
 @import './blocks/carusel';
+@import './blocks/catalog';
+@import './blocks/feedback';
+@import './blocks/footer';
