--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -9,12 +9,19 @@
     font-weight: 500;
     text-transform: uppercase;
     cursor: pointer;
+    &:hover {
+        box-shadow: inset 0 -4px 0 rgba(161, 152, 152, 0.12);
+        background-image: linear-gradient(to top, $main_color 0%,#610c0c 100%);
+    }
+    &:focus {
+        outline: none;
+    }
     &_main {
         margin-top: 67px;
         width: 300px;
         height: 50px;
         font-size: 16px;
-        text-align: center;
+        text-align: center;   
     }
     &_submit {
         width: 100%;
