--- a/src/sass/blocks/_carusel.scss
+++ b/src/sass/blocks/_carusel.scss
@@ -13,6 +13,9 @@
         border: none;
         background-color: #fff;
         -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+        &:focus {
+            outline: none;
+        }
         img {
             width: 31px;
             height: 50px;
