--- a/src/sass/blocks/_catalog.scss
+++ b/src/sass/blocks/_catalog.scss
@@ -38,8 +38,7 @@
     }
     &__content {
         margin-top: 60px;
-        display: flex;
-        justify-content: space-between;
+        justify-content: center;
         flex-wrap: wrap;
         display: none;
         &_active {
@@ -52,7 +51,8 @@
         border: 2px solid #e8e8e8;
         padding: 20px 20px 26px 20px;
         overflow: hidden;
-        margin-bottom: 20px     ;
+        margin-bottom: 20px;
+        margin-right: 15px;
         &__img {
             max-width: 100%;
             height: 200px;
