--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -25,7 +25,7 @@
     }
     &__icons {
         margin-top: 64px;
-        width: 425px;
+        max-width: 425px;
         display: flex;
         justify-content: space-around;
     }
