--- a/src/sass/blocks/_catalog.scss
+++ b/src/sass/blocks/_catalog.scss
@@ -125,26 +125,28 @@
             width: 50%;
             margin-left: 0;
             transform: translateX(0%);
-            padding-right: 20px;
             transition: 0.5s all;
-            padding-left: 19px;
             margin-bottom: 0;
-            list-style-type: none;
             position: relative;
-            li {
-                color: #555555;
-                font-size: 14px;
-                font-weight: 300;
-                margin-bottom: 20px;
-                position: relative;
-                &::before {
-                    content: '';
-                    position: absolute;
-                    width: 5px;
-                    height: 5px;
-                    background-color: $main-color;
-                    left: -14px;
-                    top: 7px;
+            ul {
+                padding-left: 19px;
+                padding-right: 20px;
+                list-style-type: none;
+                li {
+                    color: #555555;
+                    font-size: 14px;
+                    font-weight: 300;
+                    margin-bottom: 20px;
+                    position: relative;
+                    &::before {
+                        content: '';
+                        position: absolute;
+                        width: 5px;
+                        height: 5px;
+                        background-color: $main-color;
+                        left: -14px;
+                        top: 7px;
+                    }
                 }
             }
             &_active {
