--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -54,6 +54,11 @@
         justify-content: center;
         align-items: center;
     }
+    iframe {
+        width: 100%; 
+        height: 630px;  
+        border: 0; 
+    }
 }
 
 
