--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,5 +1,6 @@
 @import './base/variables';
 @import './base/media';
+@import './base/animations';
 
 * {
     font-family: 'Museo Sans Cyrl', sans-serif;
@@ -25,3 +26,4 @@
 @import './blocks/feedback';
 @import './blocks/footer';
 @import './blocks/modal';
+@import './blocks/pageup';
