--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -4,6 +4,7 @@
 @import './libs/bootstrap-reboot.min';
 @import './libs/fonts';
 @import './libs/animate';
+@import './libs/tini-slider';
 
 * {
     font-family: 'Museo Sans Cyrl', sans-serif;
